--- a/style.css
+++ b/style.css
@@ -12,14 +12,14 @@ body,html {
 
 .keys {
     display: flex;
-    flex: 1;
+    flex: 2;
     min-height: 100vh;
     align-items: center;
     justify-content: center;
 }
 
 .key {
-    border: .4rem solid black;
+    border: .4rem solid saddlebrown;
     border-radius: .5rem;
     margin: 1rem;
     font-size: 1.5rem;
